Delete 'autofocus' where unnecessary

--- a/travelsFront/app/templates/login.hbs
+++ b/travelsFront/app/templates/login.hbs
@@ -11,7 +11,7 @@
 		<div class="loginForm form-group">
 			<label for="password" class="col-sm-2 control-label">Password</label>
 			<div class="col-sm-4">   	
-				{{input id="password" class="form-control" value=password type="password" autofocus="autofocus"}}
+				{{input id="password" class="form-control" value=password type="password"}}
 			</div> 
 		</div>
 
@@ -20,10 +20,6 @@
 		</div>
 
 	</form>
-	<!-- {{#if errorMessage}}
-   <p>{{errorMessage}}</p>
-		{{/if}} -->
-
 </div>	
 
 
