--- a/travelsFront/app/templates/profile.hbs
+++ b/travelsFront/app/templates/profile.hbs
@@ -16,21 +16,21 @@
 		<div class="profileForm form-group">
 			<label for="first_name" class="col-sm-2 control-label">Όνομα</label>
 			<div class="col-sm-4"> 	
-				{{input value=model.first_name type="text" class="form-control" autofocus="autofocus"}}
+				{{input value=model.first_name type="text" class="form-control"}}
 			</div>
 		</div>
 
 		<div class="profileForm form-group">
 			<label for="last_name" class="col-sm-2 control-label">Επώνυμο</label>
 			<div class="col-sm-4"> 	
-				{{input value=model.last_name type="text" class="form-control" autofocus="autofocus"}}
+				{{input value=model.last_name type="text" class="form-control"}}
 			</div>
 		</div>
 
 		<div class="profileForm form-group">
 			<label for="iban" class="col-sm-2 control-label">IBAN</label>
 			<div class="col-sm-4"> 
-				{{input value=model.iban type="text" class="form-control" autofocus="autofocus"}}
+				{{input value=model.iban type="text" class="form-control"}}
 			</div>	
 			{{#if (v-get model 'iban' 'isInvalid') }}
 				<font color="red">{{v-get model 'iban' 'message'}}</font>
@@ -68,7 +68,7 @@
 		<div class="profileForm form-group">
 			<label for="taxRegNum" class="col-sm-2 control-label">ΑΦΜ</label>
 			<div class="col-sm-4">
-				{{input value=model.taxRegNum type="text" class="form-control" autofocus="autofocus"}}
+				{{input value=model.taxRegNum type="text" class="form-control"}}
 			</div>	
 			{{#if (v-get model 'taxRegNum' 'isInvalid') }}
 				<font color="red">{{v-get model 'taxRegNum' 'message'}}</font>
