--- a/travelsFront/app/templates/edit-petition.hbs
+++ b/travelsFront/app/templates/edit-petition.hbs
@@ -7,21 +7,21 @@
 			<div class="profileForm form-group">
 				<label for="first_name" class="col-sm-2 control-label">Όνομα</label>
 				<div class="col-sm-8">
-					{{input value=model.name type="text" class="form-control" autofocus="autofocus"}}
+					{{input value=model.name type="text" class="form-control"}}
 				</div>
 			</div>
 
 			<div class="profileForm form-group">
 				<label for="last_name" class="col-sm-2 control-label">Επώνυμο</label>
 				<div class="col-sm-8">	
-					{{input value=model.surname type="text" class="form-control" autofocus="autofocus"}}
+					{{input value=model.surname type="text" class="form-control"}}
 				</div>
 			</div>
 
 			<div class="profileForm form-group">
 				<label for="iban" class="col-sm-2 control-label">IBAN</label>
 				<div class="col-sm-8">	
-					{{input value=model.iban type="text" class="form-control" autofocus="autofocus"}}
+					{{input value=model.iban type="text" class="form-control"}}
 				</div>
 				{{#if (v-get model 'iban' 'isInvalid') }}
 				<font color="red">{{v-get model 'iban' 'message'}}</font>
@@ -61,7 +61,7 @@
 			<div class="profileForm form-group">
 				<label for="taxRegNum" class="col-sm-2 control-label">ΑΦΜ</label>
 				<div class="col-sm-8">	
-					{{input value=model.taxRegNum type="text" class="form-control" autofocus="autofocus"}}
+					{{input value=model.taxRegNum type="text" class="form-control"}}
 
 				</div>
 				{{#if (v-get model 'taxRegNum' 'isInvalid') }}
@@ -120,7 +120,7 @@
 			<div class="profileForm form-group">
 				<label for="project" class="col-sm-4 control-label">Έργο</label>
 				<div class="col-sm-8">
-					<select onchange={{action "setProject" value="target.value"}} class="form-control">
+					<select onchange={{action "setProject" value="target.value"}} class="form-control" autofocus="autofocus">
 						<option value=""></option>
 						{{#each projects as |projectChoice|}}
 						<option value={{projectChoice.id}} selected={{eq projectChoice.id model.project.id}}>{{projectChoice.name}}</option>
@@ -136,7 +136,7 @@
 			<div class="profileForm form-group">
 				<label for="taskStartDate" class="col-sm-4 control-label">Ημ/νία - Ώρα Έναρξης Εργασιών</label>
 				<div class="col-sm-8">	
-					{{input value=model.taskStartDate type="datetime-local" class="form-control" autofocus="autofocus"}}
+					{{input value=model.taskStartDate type="datetime-local" class="form-control"}}
 
 				</div>
 			</div>
@@ -144,7 +144,7 @@
 			<div class="profileForm form-group">
 				<label for="taskEndDate" class="col-sm-4 control-label">Ημ/νία - Ώρα Λήξης Εργασιών</label>
 				<div class="col-sm-8">	
-					{{input value=model.taskEndDate type="datetime-local" class="form-control" autofocus="autofocus"}}
+					{{input value=model.taskEndDate type="datetime-local" class="form-control"}}
 					
 				</div>
 			</div>
@@ -207,7 +207,7 @@
 				<label for="reason" class="col-sm-4 control-label">Αιτιολογία Μετακίνησης</label>
 				<div class="col-sm-8">	
 					{{#character-limit max=100}}
-					{{textarea value=model.reason type="textarea" class="form-control" autofocus="autofocus"}}
+					{{textarea value=model.reason type="textarea" class="form-control"}}
 					{{/character-limit}}
 				</div>
 			</div>
@@ -216,7 +216,7 @@
 				<label for="recTransport" class="col-sm-4 control-label">Προτεινόμενα Μέσα Μετακίνησης</label>
 				<div class="col-sm-8">	
 					{{#character-limit max=100}}
-					{{textarea value=model.recTransport type="text" class="form-control" autofocus="autofocus"}}
+					{{textarea value=model.recTransport type="text" class="form-control"}}
 					{{/character-limit}}
 				</div>
 			</div>
@@ -225,7 +225,7 @@
 				<label for="recAccomondation" class="col-sm-4 control-label">Προτεινόμενο Κατάλυμα</label>
 				<div class="col-sm-8">	
 					{{#character-limit max=100}}
-					{{textarea value=model.recAccomondation type="textarea" class="form-control" autofocus="autofocus"}}
+					{{textarea value=model.recAccomondation type="textarea" class="form-control"}}
 					{{/character-limit}}
 				</div>
 			</div>
@@ -234,7 +234,7 @@
 				<label for="recCostParticipation" class="col-sm-4 control-label">Κόστος Συμμετοχής</label>
 				<div class="col-sm-8">	
 					{{#character-limit max=100}}
-					{{textarea value=model.recCostParticipation type="textarea" class="form-control" autofocus="autofocus"}}
+					{{textarea value=model.recCostParticipation type="textarea" class="form-control"}}
 					{{/character-limit}}
 				</div>
 			</div>
@@ -243,7 +243,7 @@
 				<label for="recOtherCost" class="col-sm-4 control-label">Λοιπά Έξοδα</label>
 				<div class="col-sm-8">	
 					{{#character-limit max=100}}
-					{{textarea value=model.recOtherCost type="textarea" class="form-control" autofocus="autofocus"}}
+					{{textarea value=model.recOtherCost type="textarea" class="form-control"}}
 					{{/character-limit}}
 				</div>
 			</div> -->
