--- a/travelsFront/app/templates/petition.hbs
+++ b/travelsFront/app/templates/petition.hbs
@@ -26,7 +26,7 @@
 			<div class="profileForm form-group">
 				<label for="project" class="col-sm-4 control-label">Έργο</label>
 				<div class="col-sm-8">
-					<select onchange={{action "setProject" value="target.value"}} class="form-control">
+					<select onchange={{action "setProject" value="target.value"}} class="form-control" autofocus="autofocus">
 						<option value=""></option>
 						{{#each projects as |projectChoice|}}
 						<option value={{projectChoice.id}} selected={{eq projectChoice.id model.project.id}}>{{projectChoice.name}}</option>
@@ -42,14 +42,14 @@
 			<div class="profileForm form-group">
 				<label for="taskStartDate" class="col-sm-4 control-label">Ημ/νία - Ώρα Έναρξης Εργασιών</label>
 				<div class="col-sm-8">	
-					{{input value=model.taskStartDate type="datetime-local" class="form-control" autofocus="autofocus"}}
+					{{input value=model.taskStartDate type="datetime-local" class="form-control" }}
 				</div>
 			</div>
 
 			<div class="profileForm form-group">
 				<label for="taskEndDate" class="col-sm-4 control-label">Ημ/νία - Ώρα Λήξης Εργασιών</label>
 				<div class="col-sm-8">	
-					{{input value=model.taskEndDate type="datetime-local" class="form-control" autofocus="autofocus"}}
+					{{input value=model.taskEndDate type="datetime-local" class="form-control"}}
 
 				</div>
 			</div>
@@ -111,7 +111,7 @@
 				<label for="reason" class="col-sm-4 control-label">Αιτιολογία Μετακίνησης</label>
 				<div class="col-sm-8">	
 					{{#character-limit max=100}}
-					{{textarea value=model.reason type="textarea" class="form-control" autofocus="autofocus"}}
+					{{textarea value=model.reason type="textarea" class="form-control"}}
 					{{/character-limit}}
 				</div>
 			</div>
@@ -120,7 +120,7 @@
 				<label for="recTransport" class="col-sm-4 control-label">Προτεινόμενα Μέσα Μετακίνησης</label>
 				<div class="col-sm-8">	
 					{{#character-limit max=100}}
-					{{textarea value=model.recTransport type="text" class="form-control" autofocus="autofocus"}}
+					{{textarea value=model.recTransport type="text" class="form-control"}}
 					{{/character-limit}}
 				</div>
 			</div>
@@ -129,7 +129,7 @@
 				<label for="recAccomondation" class="col-sm-4 control-label">Προτεινόμενο Κατάλυμα</label>
 				<div class="col-sm-8">	
 					{{#character-limit max=100}}
-					{{textarea value=model.recAccomondation type="textarea" class="form-control" autofocus="autofocus"}}
+					{{textarea value=model.recAccomondation type="textarea" class="form-control"}}
 					{{/character-limit}}
 				</div>
 			</div>
@@ -138,7 +138,7 @@
 				<label for="recCostParticipation" class="col-sm-4 control-label">Κόστος Συμμετοχής</label>
 				<div class="col-sm-8">	
 					{{#character-limit max=100}}
-					{{textarea value=model.recCostParticipation type="textarea" class="form-control" autofocus="autofocus"}}
+					{{textarea value=model.recCostParticipation type="textarea" class="form-control"}}
 					{{/character-limit}}
 				</div>
 			</div>
@@ -147,7 +147,7 @@
 				<label for="recOtherCost" class="col-sm-4 control-label">Λοιπά Έξοδα</label>
 				<div class="col-sm-8">	
 					{{#character-limit max=100}}
-					{{textarea value=model.recOtherCost type="textarea" class="form-control" autofocus="autofocus"}}
+					{{textarea value=model.recOtherCost type="textarea" class="form-control"}}
 					{{/character-limit}}
 				</div>
 			</div> -->
