--- a/travelsFront/app/templates/signup.hbs
+++ b/travelsFront/app/templates/signup.hbs
@@ -16,7 +16,7 @@
 		<div class="signupForm form-group">
 			<label for="password" class="col-sm-2 control-label">Password</label>
 			<div class="col-sm-4">	
-				{{input value=password type="password" class="form-control" autofocus="autofocus"}}
+				{{input value=password type="password" class="form-control"}}
 			</div>	
 			{{#if (v-get model 'password' 'isInvalid') }}
 				<font color="red">{{v-get model 'password' 'message'}}</font>
@@ -26,7 +26,7 @@
 		<div class="signupForm form-group">
 			<label for="email" class="col-sm-2 control-label">Email</label>
 			<div class="col-sm-4">	
-				{{input value=email type="text" key-up='clearEmailErrorLabels' class="form-control" autofocus="autofocus"}}
+				{{input value=email type="text" key-up='clearEmailErrorLabels' class="form-control"}}
 			</div>	
 			{{#if (v-get model 'email' 'isInvalid') }}
 				<font color="red">{{v-get model 'email' 'message'}}</font>
