--- a/travelsFront/app/templates/petition.hbs
+++ b/travelsFront/app/templates/petition.hbs
@@ -1,157 +1,9 @@
 <div class="container">
 	<form class="form-horizontal col-md-12 leftForm" {{action "clearMessage" on="click"}} role="form">
 
-		<div class="col-md-6 leftForm">
-			{{partial 'petition-profile'}}
-		</div>
-
-		<div class="col-md-6 rightForm">	
-
-			<h4>Στοιχεία Αίτησης Ταξιδιού</h4><br>
-
-			<div class="profileForm form-group">
-				<label for="movementCategory" class="col-sm-4 control-label">Κατηγορία Μετακίνησης</label><br>
-				<div class="col-sm-8">
-					{{input type="text" name="movementCategory" class="form-control" value=categoryOfMovement.name readonly="readonly"}}	
-				</div>
-			</div>
-
-			<div class="profileForm form-group">
-				<label for="countryCategory" class="col-sm-4 control-label">Κατηγορία Χώρας</label><br>
-				<div class="col-sm-8">
-					{{input type="text" name="countryCategory" class="form-control" value=""  readonly="readonly"}}	
-				</div>
-			</div>
-
-			<div class="profileForm form-group">
-				<label for="project" class="col-sm-4 control-label">Έργο</label>
-				<div class="col-sm-8">
-					<select onchange={{action "setProject" value="target.value"}} class="form-control" autofocus="autofocus">
-						<option value=""></option>
-						{{#each projects as |projectChoice|}}
-						<option value={{projectChoice.id}} selected={{eq projectChoice.id model.project.id}}>{{projectChoice.name}}</option>
-						{{/each}}
-					</select>	
-				</div>
-				{{#if (v-get model 'project' 'isInvalid') }}
-				<font color="red">{{v-get model 'project' 'message'}}</font>
-				{{/if}} 
-
-			</div>
-
-			<div class="profileForm form-group">
-				<label for="taskStartDate" class="col-sm-4 control-label">Ημ/νία - Ώρα Έναρξης Εργασιών</label>
-				<div class="col-sm-8">	
-					{{input value=model.taskStartDate type="datetime-local" class="form-control" }}
-				</div>
-			</div>
-
-			<div class="profileForm form-group">
-				<label for="taskEndDate" class="col-sm-4 control-label">Ημ/νία - Ώρα Λήξης Εργασιών</label>
-				<div class="col-sm-8">	
-					{{input value=model.taskEndDate type="datetime-local" class="form-control"}}
-
-				</div>
-			</div>
-
-			<div class="profileForm form-group">
-				<label for="departurePoint" class="col-sm-4 control-label">Τόπος Αναχώρησης</label>
-				<div class="col-sm-8">
-					<select onchange={{action "setDeparturePoint" value="target.value"}} class="form-control" id="test">
-
-						{{#each departurePoints as |departurePointChoice|}}
-						<option value={{departurePointChoice.id}} selected={{eq departurePointChoice.id model.departurePoint.id}}>{{departurePointChoice.name}}</option>
-						{{/each}}
-					</select>	
-				</div>
-			</div>
-
-			<div class='arrival-point'>
-				<div class="profileForm form-group">
-					<label for="arrivalPoint" class="col-sm-4 control-label">Χώρα Προορισμού</label>
-					<div class="col-sm-8">	
-						<select onchange={{action "setCountry" value="target.value"}} class="form-control">
-							<option value="">Επιλέξτε χώρα προορισμού</option>
-
-							{{#each countries as |countryChoice|}}
-							<option value={{countryChoice.id}}>{{countryChoice.name}}</option>
-							{{/each}}
-						</select>
-					</div>
-				</div>
-
-				<div class="profileForm form-group">
-					<label for="arrivalPoint" class="col-sm-4 control-label">Πόλη Προορισμού</label>
-					<div class="col-sm-8">	
-						<select onchange={{action "setArrivalPoint" value="target.value"}} class="form-control" disabled={{not country_selected}}>
-							<option value=""></option>
-
-							{{#each arrivalPointModel as |arrivalPointChoice|}}
-							<option value={{arrivalPointChoice.id}} selected={{eq arrivalPointChoice.id model.arrivalPoint.id}}>{{arrivalPointChoice.name}}</option>
-							{{/each}}
-						</select>
-					</div>
-				</div>
-			</div>
-
-			<div class="profileForm form-group">
-				<label for="transportation" class="col-sm-4 control-label">Μέσο Μετακίνησης</label>
-				<div class="col-sm-8">	
-					<select onchange={{action "setTransportation" value="target.value"}} class="form-control"> 
-						<option value=""></option>
-
-						{{#each transportations as |transportationChoice|}}
-						<option value={{transportationChoice.id}} selected={{eq transportationChoice.id model.transportation.id}}>{{transportationChoice.name}}</option>
-						{{/each}}
-					</select>
-				</div>
-			</div> 
-
-			<div class="profileForm form-group">
-				<label for="reason" class="col-sm-4 control-label">Αιτιολογία Μετακίνησης</label>
-				<div class="col-sm-8">	
-					{{#character-limit max=100}}
-					{{textarea value=model.reason type="textarea" class="form-control"}}
-					{{/character-limit}}
-				</div>
-			</div>
-
-			<div class="profileForm form-group">
-				<label for="recTransport" class="col-sm-4 control-label">Προτεινόμενα Μέσα Μετακίνησης</label>
-				<div class="col-sm-8">	
-					{{#character-limit max=100}}
-					{{textarea value=model.recTransport type="text" class="form-control"}}
-					{{/character-limit}}
-				</div>
-			</div>
-
-			<div class="profileForm form-group">
-				<label for="recAccomondation" class="col-sm-4 control-label">Προτεινόμενο Κατάλυμα</label>
-				<div class="col-sm-8">	
-					{{#character-limit max=100}}
-					{{textarea value=model.recAccomondation type="textarea" class="form-control"}}
-					{{/character-limit}}
-				</div>
-			</div>
-
-			<div class="profileForm form-group">
-				<label for="recCostParticipation" class="col-sm-4 control-label">Κόστος Συμμετοχής</label>
-				<div class="col-sm-8">	
-					{{#character-limit max=100}}
-					{{textarea value=model.recCostParticipation type="textarea" class="form-control"}}
-					{{/character-limit}}
-				</div>
-			</div>
-
-			<!-- <div class="profileForm form-group">
-				<label for="recOtherCost" class="col-sm-4 control-label">Λοιπά Έξοδα</label>
-				<div class="col-sm-8">	
-					{{#character-limit max=100}}
-					{{textarea value=model.recOtherCost type="textarea" class="form-control"}}
-					{{/character-limit}}
-				</div>
-			</div> -->
-		</div>	
+		
+		{{partial 'petition-form'}}
+		
 		<button type="submit" class="btn btn-primary" {{action "petitionSave"}} disabled={{v-get model 'isInvalid'}}>Αποθήκευση Στοιχείων</button>
 		<button type="submit" class="btn btn-primary" id="submit" {{action "petitionSubmit"}} disabled={{v-get model 'isInvalid'}}>Υποβολή Αίτησης</button>
 
