Reconstruct petition-form template

--- a/travelsFront/app/templates/edit-petition.hbs
+++ b/travelsFront/app/templates/edit-petition.hbs
@@ -1,5 +1,5 @@
 <div class="container">
-	<form class="form-horizontal col-md-12 leftForm" {{action "clearMessage" on="click"}} role="form">
+	<form class="form-horizontal col-md-12" {{action "clearMessage" on="click"}} role="form">
 
 		{{partial 'petition-form'}}
 	
