--- a/travelsFront/app/styles/app.scss
+++ b/travelsFront/app/styles/app.scss
@@ -3,20 +3,12 @@
 @charset "utf-8";
 
 
-.leftForm {
-	display: inline-block;   
-}
-
-.rightForm {
-	display: inline-block;   
-}
-.arrival-point {
+/*.arrival-point {
 	border-radius: 1%;
 	border: 1px dotted #cccccc;
-	padding-right: 2%;
-	padding-top: 3%;
-	margin-bottom: 3%; 
-}
+	margin-top: 1%;
+	-bottom: 3%; 
+}*/
 
 .greenMessage {
 	color:green;
