Create template for advanced petition

--- a/travelsFront/app/templates/petition-form.hbs
+++ b/travelsFront/app/templates/petition-form.hbs
@@ -191,7 +191,7 @@
 		<label for="reason" class="col-sm-2 control-label">Αιτιολογία Μετακίνησης</label>
 		<div class="col-sm-4">	
 			{{#character-limit max=100}}
-			{{textarea value=model.reason type="textarea" class="form-control"}}
+			{{textarea value=model.reason type="textarea" cols="75" class="form-control"}}
 			{{/character-limit}}
 		</div>
 	</div>
@@ -200,7 +200,7 @@
 		<label for="recTransport" class="col-sm-2 control-label">Προτεινόμενα Μέσα Μετακίνησης</label>
 		<div class="col-sm-4">	
 			{{#character-limit max=100}}
-			{{textarea value=model.recTransport type="text" class="form-control"}}
+			{{textarea value=model.recTransport type="textarea" cols="75" class="form-control"}}
 			{{/character-limit}}
 		</div>
 	</div>
@@ -209,7 +209,7 @@
 		<label for="recAccomondation" class="col-sm-2 control-label">Προτεινόμενο Κατάλυμα</label>
 		<div class="col-sm-4">	
 			{{#character-limit max=100}}
-			{{textarea value=model.recAccomondation type="textarea" class="form-control"}}
+			{{textarea value=model.recAccomondation type="textarea" cols="75" class="form-control"}}
 			{{/character-limit}}
 		</div>
 	</div>
@@ -218,7 +218,7 @@
 		<label for="recCostParticipation" class="col-sm-2 control-label">Κόστος Συμμετοχής</label>
 		<div class="col-sm-4">	
 			{{#character-limit max=100}}
-			{{textarea value=model.recCostParticipation type="textarea" class="form-control"}}
+			{{textarea value=model.recCostParticipation type="textarea" cols="75" class="form-control"}}
 			{{/character-limit}}
 		</div>
 	</div>
@@ -227,7 +227,7 @@
 		<label for="recOtherCost" class="col-sm-2 control-label">Λοιπά Έξοδα</label>
 		<div class="col-sm-4">	
 			{{#character-limit max=100}}
-			{{textarea value=model.recOtherCost type="textarea" class="form-control"}}
+			{{textarea value=model.recOtherCost type="textarea" cols="75" class="form-control"}}
 			{{/character-limit}}
 		</div>
 	</div> -->
