--- a/travelsFront/app/templates/petition-form.hbs
+++ b/travelsFront/app/templates/petition-form.hbs
@@ -1,4 +1,4 @@
-<div class="col-md-12">
+<div class="col-md-12 panel panel-default">
 
 	<h4>Στοιχεία Προφίλ</h4><br>
 
@@ -92,7 +92,7 @@
 
 </div>
 
-<div class="col-md-12">	
+<div class="col-md-12 panel panel-default">	
 
 	<h4>Στοιχεία Αίτησης Ταξιδιού</h4><br>
 
