Add bootstrap panels to all forms

--- a/travelsFront/app/templates/petition-form.hbs
+++ b/travelsFront/app/templates/petition-form.hbs
@@ -1,236 +1,228 @@
-<div class="col-md-12 panel panel-default">
+<div class="panel panel-default">
+	
+	<div class = "panel-heading">
+      <h4 class = "panel-title">Στοιχεία Προφίλ</h4>
+   	</div>
+	
+   	<div class = "panel-body">
+		<div class="profileForm form-group">
+			<label for="first_name" class="col-sm-2 control-label">Όνομα</label>
+			<div class="col-sm-4">
+				{{input value=model.name type="text" class="form-control"}}
+			</div>
 
-	<h4>Στοιχεία Προφίλ</h4><br>
+			<label for="last_name" class="col-sm-2 control-label">Επώνυμο</label>
+			<div class="col-sm-4">	
+				{{input value=model.surname type="text" class="form-control"}}
+			</div>
+		</div> 
 
-	<div class="profileForm form-group">
-		<label for="first_name" class="col-sm-2 control-label">Όνομα</label>
-		<div class="col-sm-4">
-			{{input value=model.name type="text" class="form-control"}}
+		<div class="profileForm form-group">
+			<label for="specialtyID" class="col-sm-2 control-label">Ειδικότητα</label>
+			<div class="col-sm-4">	
+				<select onchange={{action "setSpecialty" value="target.value"}} class="form-control">
+					<option value=""></option>
+
+					{{#each specialties as |specialtyChoice|}}
+						<option value={{specialtyChoice.id}} selected={{eq specialtyChoice.id model.specialtyID.id}}>{{specialtyChoice.name}}</option>
+					{{/each}}
+				</select>		
+			</div>
+
+			<label for="kind" class="col-sm-2 control-label">Ιδιότητα</label>
+			<div class="col-sm-4">	
+				<select onchange={{action "setKind" value="target.value"}} class="form-control">
+					<option value=""></option>
+
+					{{#each kinds as |kindChoice|}}
+						<option value={{kindChoice.id}} selected={{eq kindChoice.id model.kind.id}}>{{kindChoice.name}}</option>
+					{{/each}}
+				</select>
+			</div>
+		</div> 
+
+		<div class="profileForm form-group">
+			<label for="taxRegNum" class="col-sm-2 control-label">ΑΦΜ</label>
+			<div class="col-sm-4">	
+				{{input value=model.taxRegNum type="text" class="form-control"}}
+			</div>
+			{{#if (v-get model 'taxRegNum' 'isInvalid') }}
+				<font color="red">{{v-get model 'taxRegNum' 'message'}}</font>
+			{{/if}}
+
+			<label for="taxOffice" class="col-sm-2 control-label">ΔΟΥ</label>
+			<div class="col-sm-4">	
+				<select onchange={{action "setTaxOffice" value="target.value"}} class="form-control"> 
+					<option value=""></option>
+					{{#each tax-offices  as |taxOfficeChoice|}}
+						<option value={{taxOfficeChoice.id}} selected={{eq taxOfficeChoice.id model.taxOffice.id}}>{{taxOfficeChoice.name}}</option>
+					{{/each}}
+				</select>
+			</div>
 		</div>
 
-		<label for="last_name" class="col-sm-2 control-label">Επώνυμο</label>
-		<div class="col-sm-4">	
-			{{input value=model.surname type="text" class="form-control"}}
+		<div class="profileForm form-group">
+			<label for="iban" class="col-sm-2 control-label">IBAN</label>
+			<div class="col-sm-4">	
+				{{input value=model.iban type="text" class="form-control"}}
+			</div>
+			{{#if (v-get model 'iban' 'isInvalid') }}
+				<font color="red">{{v-get model 'iban' 'message'}}</font>
+			{{/if}}
+
+			<label for="category" class="col-sm-2 control-label">Κατηγορία Χρήστη</label>
+			<div class="col-sm-4"> 	
+				<select onchange={{action "setCategory" value="target.value"}} class="form-control">
+					<option value=""></option>
+
+					{{#each categories  as |categoryChoice|}}
+						<option value={{categoryChoice.id}} selected={{eq categoryChoice.id model.user_category.id}}>{{categoryChoice.name}}</option>
+					{{/each}}
+				</select>
+			</div>	
 		</div>
-	</div> 
-
-	<div class="profileForm form-group">
-		<label for="specialtyID" class="col-sm-2 control-label">Ειδικότητα</label>
-		<div class="col-sm-4">	
-			<select onchange={{action "setSpecialty" value="target.value"}} class="form-control">
-				<option value=""></option>
-
-				{{#each specialties as |specialtyChoice|}}
-					<option value={{specialtyChoice.id}} selected={{eq specialtyChoice.id model.specialtyID.id}}>{{specialtyChoice.name}}</option>
-
-				{{/each}}
-			</select>		
-		</div>
-
-		<label for="kind" class="col-sm-2 control-label">Ιδιότητα</label>
-		<div class="col-sm-4">	
-			<select onchange={{action "setKind" value="target.value"}} class="form-control">
-				<option value=""></option>
-
-				{{#each kinds as |kindChoice|}}
-
-					<option value={{kindChoice.id}} selected={{eq kindChoice.id model.kind.id}}>{{kindChoice.name}}</option>
-
-				{{/each}}
-			</select>
-		</div>
-	</div> 
-
-
-	<div class="profileForm form-group">
-		<label for="taxRegNum" class="col-sm-2 control-label">ΑΦΜ</label>
-		<div class="col-sm-4">	
-			{{input value=model.taxRegNum type="text" class="form-control"}}
-
-		</div>
-		{{#if (v-get model 'taxRegNum' 'isInvalid') }}
-			<font color="red">{{v-get model 'taxRegNum' 'message'}}</font>
-		{{/if}}
-
-		<label for="taxOffice" class="col-sm-2 control-label">ΔΟΥ</label>
-		<div class="col-sm-4">	
-			<select onchange={{action "setTaxOffice" value="target.value"}} class="form-control"> 
-				<option value=""></option>
-				{{#each tax-offices  as |taxOfficeChoice|}}
-
-					<option value={{taxOfficeChoice.id}} selected={{eq taxOfficeChoice.id model.taxOffice.id}}>{{taxOfficeChoice.name}}</option>
-
-				{{/each}}
-			</select>
-		</div>
-
 	</div>
-
-
-	<div class="profileForm form-group">
-		<label for="iban" class="col-sm-2 control-label">IBAN</label>
-		<div class="col-sm-4">	
-			{{input value=model.iban type="text" class="form-control"}}
-		</div>
-		{{#if (v-get model 'iban' 'isInvalid') }}
-			<font color="red">{{v-get model 'iban' 'message'}}</font>
-		{{/if}}
-
-		<label for="category" class="col-sm-2 control-label">Κατηγορία Χρήστη</label>
-		<div class="col-sm-4"> 	
-			<select onchange={{action "setCategory" value="target.value"}} class="form-control">
-				<option value=""></option>
-
-				{{#each categories  as |categoryChoice|}}
-
-					<option value={{categoryChoice.id}} selected={{eq categoryChoice.id model.user_category.id}}>{{categoryChoice.name}}</option>
-
-				{{/each}}
-			</select>
-		</div>	
-	</div>
-
 </div>
 
-<div class="col-md-12 panel panel-default">	
+<div class="panel panel-default">	
 
-	<h4>Στοιχεία Αίτησης Ταξιδιού</h4><br>
+	<div class = "panel-heading">
+      <h4 class = "panel-title">Στοιχεία Αίτησης Ταξιδιού</h4>
+   	</div>
+	
+   	<div class = "panel-body">
+		<div class="profileForm form-group">
+			<label for="movementCategory" class="col-sm-2 control-label">Κατηγορία Μετακίνησης</label>
+			<div class="col-sm-4">
+				{{input type="text" name="movementCategory" class="form-control" value=categoryOfMovement.name readonly="readonly"}}	
+			</div>
 
-	<div class="profileForm form-group">
-		<label for="movementCategory" class="col-sm-2 control-label">Κατηγορία Μετακίνησης</label>
-		<div class="col-sm-4">
-			{{input type="text" name="movementCategory" class="form-control" value=categoryOfMovement.name readonly="readonly"}}	
+			<label for="countryCategory" class="col-sm-2 control-label">Κατηγορία Χώρας</label>
+			<div class="col-sm-4">
+				{{input type="text" name="countryCategory" class="form-control" value=""  readonly="readonly"}}	
+			</div>
 		</div>
 
-		<label for="countryCategory" class="col-sm-2 control-label">Κατηγορία Χώρας</label>
-		<div class="col-sm-4">
-			{{input type="text" name="countryCategory" class="form-control" value=""  readonly="readonly"}}	
-		</div>
-	</div>
+		<div class="profileForm form-group">
+			<label for="project" class="col-sm-2 control-label">Έργο</label>
+			<div class="col-sm-4">
+				<select onchange={{action "setProject" value="target.value"}} class="form-control" autofocus="autofocus">
+					<option value=""></option>
 
-	<div class="profileForm form-group">
-		<label for="project" class="col-sm-2 control-label">Έργο</label>
-		<div class="col-sm-4">
-			<select onchange={{action "setProject" value="target.value"}} class="form-control" autofocus="autofocus">
-				<option value=""></option>
-				{{#each projects as |projectChoice|}}
-				<option value={{projectChoice.id}} selected={{eq projectChoice.id model.project.id}}>{{projectChoice.name}}</option>
-				{{/each}}
-			</select>	
-		</div>
-		{{#if (v-get model 'project' 'isInvalid') }}
-		<font color="red">{{v-get model 'project' 'message'}}</font>
-		{{/if}} 
-
-	</div>
-
-	<div class="profileForm form-group">
-		<label for="taskStartDate" class="col-sm-2 control-label">Έναρξη Εργασιών</label>
-		<div class="col-sm-4">	
-			{{input value=model.taskStartDate type="datetime-local" class="form-control" }}
+					{{#each projects as |projectChoice|}}
+						<option value={{projectChoice.id}} selected={{eq projectChoice.id model.project.id}}>{{projectChoice.name}}</option>
+					{{/each}}
+				</select>	
+			</div>
+			{{#if (v-get model 'project' 'isInvalid') }}
+			<font color="red">{{v-get model 'project' 'message'}}</font>
+			{{/if}} 
 		</div>
 
-		<label for="taskEndDate" class="col-sm-2 control-label">Λήξη Εργασιών</label>
-		<div class="col-sm-4">	
-			{{input value=model.taskEndDate type="datetime-local" class="form-control"}}
-		</div>
-	</div>
+		<div class="profileForm form-group">
+			<label for="taskStartDate" class="col-sm-2 control-label">Έναρξη Εργασιών</label>
+			<div class="col-sm-4">	
+				{{input value=model.taskStartDate type="datetime-local" class="form-control" }}
+			</div>
 
-	<div class="profileForm form-group">
-		<label for="departurePoint" class="col-sm-2 control-label">Αναχώρηση</label>
-		<div class="col-sm-4">
-			<select onchange={{action "setDeparturePoint" value="target.value"}} class="form-control" id="test">
-
-				{{#each departurePoints as |departurePointChoice|}}
-				<option value={{departurePointChoice.id}} selected={{eq departurePointChoice.id model.departurePoint.id}}>{{departurePointChoice.name}}</option>
-				{{/each}}
-			</select>	
+			<label for="taskEndDate" class="col-sm-2 control-label">Λήξη Εργασιών</label>
+			<div class="col-sm-4">	
+				{{input value=model.taskEndDate type="datetime-local" class="form-control"}}
+			</div>
 		</div>
 
-		
-		<label for="arrivalPoint" class="col-sm-2 control-label">Προορισμός</label>
-		<!-- <div class="arrival-point col-sm-4"> -->	
+		<div class="profileForm form-group">
+			<label for="departurePoint" class="col-sm-2 control-label">Αναχώρηση</label>
+			<div class="col-sm-4">
+				<select onchange={{action "setDeparturePoint" value="target.value"}} class="form-control" id="test">
+
+					{{#each departurePoints as |departurePointChoice|}}
+						<option value={{departurePointChoice.id}} selected={{eq departurePointChoice.id model.departurePoint.id}}>{{departurePointChoice.name}}</option>
+					{{/each}}
+				</select>	
+			</div>
+			
+			<label for="arrivalPoint" class="col-sm-2 control-label">Προορισμός</label>
+			<!-- <div class="arrival-point col-sm-4"> -->	
 			<div class="col-sm-4">	
 				<select onchange={{action "setCountry" value="target.value"}} class="form-control">
 					<option value="">Επιλέξτε χώρα προορισμού</option>
 
 					{{#each countries as |countryChoice|}}
-					<option value={{countryChoice.id}}>{{countryChoice.name}}</option>
+						<option value={{countryChoice.id}}>{{countryChoice.name}}</option>
 					{{/each}}
 				</select>
 			</div>
-		
+			
 			<div class="col-sm-4 col-sm-push-8">	
 				<select onchange={{action "setArrivalPoint" value="target.value"}} class="form-control" disabled={{not country_selected}}>
 					<option value=""></option>
 
 					{{#each arrivalPointModel as |arrivalPointChoice|}}
-					<option value={{arrivalPointChoice.id}} selected={{eq arrivalPointChoice.id model.arrivalPoint.id}}>{{arrivalPointChoice.name}}</option>
+						<option value={{arrivalPointChoice.id}} selected={{eq arrivalPointChoice.id model.arrivalPoint.id}}>{{arrivalPointChoice.name}}</option>
 					{{/each}}
 				</select>
-			</div>			
-		<!-- </div> -->
+			</div>		
+		</div>
+
+		<div class="profileForm form-group">
+			<label for="transportation" class="col-sm-2 control-label">Μέσο Μετακίνησης</label>
+			<div class="col-sm-4">	
+				<select onchange={{action "setTransportation" value="target.value"}} class="form-control"> 
+					<option value=""></option>
+
+					{{#each transportations as |transportationChoice|}}
+						<option value={{transportationChoice.id}} selected={{eq transportationChoice.id model.transportation.id}}>{{transportationChoice.name}}</option>
+					{{/each}}
+				</select>
+			</div>
+		</div> 
+
+		<div class="profileForm form-group">
+			<label for="reason" class="col-sm-2 control-label">Αιτιολογία Μετακίνησης</label>
+			<div class="col-sm-4">	
+				{{#character-limit max=100}}
+				{{textarea value=model.reason type="textarea" cols="75" class="form-control"}}
+				{{/character-limit}}
+			</div>
+		</div>
+
+		<div class="profileForm form-group">
+			<label for="recTransport" class="col-sm-2 control-label">Προτεινόμενα Μέσα Μετακίνησης</label>
+			<div class="col-sm-4">	
+				{{#character-limit max=100}}
+				{{textarea value=model.recTransport type="textarea" cols="75" class="form-control"}}
+				{{/character-limit}}
+			</div>
+		</div>
+
+		<div class="profileForm form-group">
+			<label for="recAccomondation" class="col-sm-2 control-label">Προτεινόμενο Κατάλυμα</label>
+			<div class="col-sm-4">	
+				{{#character-limit max=100}}
+				{{textarea value=model.recAccomondation type="textarea" cols="75" class="form-control"}}
+				{{/character-limit}}
+			</div>
+		</div>
+
+		<div class="profileForm form-group">
+			<label for="recCostParticipation" class="col-sm-2 control-label">Κόστος Συμμετοχής</label>
+			<div class="col-sm-4">	
+				{{#character-limit max=100}}
+				{{textarea value=model.recCostParticipation type="textarea" cols="75" class="form-control"}}
+				{{/character-limit}}
+			</div>
+		</div>
+
+		<!-- <div class="profileForm form-group">
+			<label for="recOtherCost" class="col-sm-2 control-label">Λοιπά Έξοδα</label>
+			<div class="col-sm-4">	
+				{{#character-limit max=100}}
+				{{textarea value=model.recOtherCost type="textarea" cols="75" class="form-control"}}
+				{{/character-limit}}
+			</div>
+		</div> -->
 	</div>
-
-	
-
-	<div class="profileForm form-group">
-		<label for="transportation" class="col-sm-2 control-label">Μέσο Μετακίνησης</label>
-		<div class="col-sm-4">	
-			<select onchange={{action "setTransportation" value="target.value"}} class="form-control"> 
-				<option value=""></option>
-
-				{{#each transportations as |transportationChoice|}}
-				<option value={{transportationChoice.id}} selected={{eq transportationChoice.id model.transportation.id}}>{{transportationChoice.name}}</option>
-				{{/each}}
-			</select>
-		</div>
-	</div> 
-
-	<div class="profileForm form-group">
-		<label for="reason" class="col-sm-2 control-label">Αιτιολογία Μετακίνησης</label>
-		<div class="col-sm-4">	
-			{{#character-limit max=100}}
-			{{textarea value=model.reason type="textarea" cols="75" class="form-control"}}
-			{{/character-limit}}
-		</div>
-	</div>
-
-	<div class="profileForm form-group">
-		<label for="recTransport" class="col-sm-2 control-label">Προτεινόμενα Μέσα Μετακίνησης</label>
-		<div class="col-sm-4">	
-			{{#character-limit max=100}}
-			{{textarea value=model.recTransport type="textarea" cols="75" class="form-control"}}
-			{{/character-limit}}
-		</div>
-	</div>
-
-	<div class="profileForm form-group">
-		<label for="recAccomondation" class="col-sm-2 control-label">Προτεινόμενο Κατάλυμα</label>
-		<div class="col-sm-4">	
-			{{#character-limit max=100}}
-			{{textarea value=model.recAccomondation type="textarea" cols="75" class="form-control"}}
-			{{/character-limit}}
-		</div>
-	</div>
-
-	<div class="profileForm form-group">
-		<label for="recCostParticipation" class="col-sm-2 control-label">Κόστος Συμμετοχής</label>
-		<div class="col-sm-4">	
-			{{#character-limit max=100}}
-			{{textarea value=model.recCostParticipation type="textarea" cols="75" class="form-control"}}
-			{{/character-limit}}
-		</div>
-	</div>
-
-	<!-- <div class="profileForm form-group">
-		<label for="recOtherCost" class="col-sm-2 control-label">Λοιπά Έξοδα</label>
-		<div class="col-sm-4">	
-			{{#character-limit max=100}}
-			{{textarea value=model.recOtherCost type="textarea" cols="75" class="form-control"}}
-			{{/character-limit}}
-		</div>
-	</div> -->
 </div>	
 
 
